--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cuti-cuti.my - Malaysia Holidays</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LRMGK0YS3S"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-LRMGK0YS3S');
+    </script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="./tailwind.css" rel="stylesheet">
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#317EFB"/>
-    <!-- SEO Meta Tags -->
     <meta name="description" content="cuti-cuti.my: Malaysia's Public and School Holidays for 2025 and 2026. View, save, and get reminders for your holidays. Discover travel ideas within Malaysia.">
     <meta name="keywords" content="Malaysia holidays, school holidays Malaysia, public holidays Malaysia, 2025 holidays, 2026 holidays, travel Malaysia, family trips, solo trips, local travel, Google Calendar, iCal, cuti-cuti.my">
     <meta name="author" content="cuti-cuti.my">
