--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cuti-cuti.my - Malaysia Holidays</title>
+   <title>Malaysia Public & School Holidays 2025 & 2026 | cuti-cuti.my</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LRMGK0YS3S"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -17,14 +17,14 @@
     <link href="./tailwind.css" rel="stylesheet">
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#317EFB"/>
-    <meta name="description" content="cuti-cuti.my: Malaysia's Public and School Holidays for 2025 and 2026. View, save, and get reminders for your holidays. Discover travel ideas within Malaysia.">
-    <meta name="keywords" content="Malaysia holidays, school holidays Malaysia, public holidays Malaysia, 2025 holidays, 2026 holidays, travel Malaysia, family trips, solo trips, local travel, Google Calendar, iCal, cuti-cuti.my">
+    <meta name="description" content="Plan your perfect trip with Malaysia's official public and school holidays for 2025 & 2026. View, save to calendar, get reminders & discover travel ideas. Your ultimate holiday planning guide for Malaysia.">
+    <meta name="keywords" content="Malaysia public holidays 2025, Malaysia school holidays 2025, Malaysia public holidays 2026, Malaysia school holidays 2026, cuti umum Malaysia, cuti sekolah Malaysia, travel Malaysia, family holidays, cuti-cuti Malaysia, holiday calendar, Google Calendar, iCal, Malaysian travel ideas">
     <meta name="author" content="cuti-cuti.my">
-    <meta property="og:title" content="cuti-cuti.my - Malaysia Holidays">
+    <meta property="og:title" content="Malaysia Public & School Holidays 2025 & 2026 | cuti-cuti.my">
     <meta property="og:description" content="cuti-cuti.my: Malaysia's Public and School Holidays for 2025 and 2026. View, save, and get reminders for your holidays. Discover travel ideas within Malaysia.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="YOUR_WEBSITE_URL_HERE">
-    <meta property="og:image" content="YOUR_OG_IMAGE_URL_HERE">
+    <meta property="og:url" content="https://cuti-cuti.my/">
+    <meta property="og:image" content="/images/cuti_cuti_logo.png">
     <link rel="icon" href="YOUR_FAVICON_URL_HERE">
 </head>
 <body class="bg-gray-50 dark:bg-gray-900" style="font-family: 'Inter', sans-serif;">
